force-app/main/default/objects/Grain_Contract_Line_Item__c/Grain_Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Custom Object linked to Standard Contract Object to represent Grain Contract Line Items, coming in from AGBOSS.</description>
    <label>Grain Contract Line Item</label>
    <nameField>
        <label>Grain Contract Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grain Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>