force-app/main/default/objects/Grain_Contract_Line_Item__c/fields/Bin_Grade__c.field-meta.xml
<CustomField>
    <fullName>Bin_Grade__c</fullName>
    <description>Picklist holding Bin Grade Values, coming in from AGBOSS.</description>
    <label>Bin Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bin_Grade</valueSetName>
    </valueSet>
</CustomField>