force-app/main/default/objects/Grain_Contract_Line_Item__c/fields/Grain_Contract__c.field-meta.xml
<CustomField>
    <fullName>Grain_Contract__c</fullName>
    <description>Lookup to corresponding grain contract, data transformed to create seperate line item records and link to Contract, coming in from AGBOSS.</description>
    <label>Grain Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Grain Contract Line Items</relationshipLabel>
    <relationshipName>Grain_Contract_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>