force-app/main/default/objects/Grain_Contract_Line_Item__c/fields/Grain_Contract_Line_Item_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Grain_Contract_Line_Item_External_ID__c</fullName>
    <description>Text field to represent Grain Contract Line Item External ID - Grain Contract Line Items do not exist in AGBOSS, therefore, the External ID of the corresponding Grain Contract will be populated in this field.</description>
    <label>Grain Contract Line Item External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>