force-app/main/default/objects/Grain_Contract_Line_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Text field to house Price Per Metric Tonne, coming in from AGBOSS.</description>
    <label>Price Per Metric Tonne</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>