force-app/main/default/objects/Grain_Contract_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Text field to indicate Quantity in Tonnes, coming in from AGBOSS.</description>
    <inlineHelpText>In Tonnes</inlineHelpText>
    <label>Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>