force-app/main/default/objects/Grain_Contract_Line_Item__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <description>Text field to represent spread, coming in from AGBOSS.</description>
    <label>Spread</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>