force-app/main/default/objects/Grain_Contract_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grain_Contract__c</columns>
    <columns>Bin_Grade__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>